--- a/Neko/Neko.csproj
+++ b/Neko/Neko.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Version>1.0.0</Version>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <LangVersion>latest</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Nullable>enable</Nullable>
@@ -13,6 +13,12 @@
     <PreserveCompilationContext>false</PreserveCompilationContext>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <OutputPath>$(AppData)\XIVLauncher\devPlugins\Neko</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <runtime>
+      <legacyCorruptedStateExceptionsPolicy enabled="false"/> 
+    </runtime>
   </PropertyGroup>
 
   <PropertyGroup>
