Queue system for preloading images
- Better handling of Error images
- slightly more stable memory managment

--- a/Neko/Neko.csproj
+++ b/Neko/Neko.csproj
@@ -72,7 +72,7 @@
   -->
   <ItemGroup>
     <None Include="Neko.json">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
