--- a/Neko/Neko.csproj
+++ b/Neko/Neko.csproj
@@ -58,7 +58,7 @@
   </ItemGroup>
    
   <ItemGroup> 
-    <PackageReference Include="DalamudPackager" Version="2.1.7"  GeneratePathProperty="false" /> 
+    <PackageReference Include="DalamudPackager" Version="2.1.7"/> 
   </ItemGroup>
  
   <ItemGroup>
