Update to .Net6 and new Json parser

--- a/NekoLewd/NekoLewd.csproj
+++ b/NekoLewd/NekoLewd.csproj
@@ -12,7 +12,8 @@
     <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
     <PreserveCompilationContext>false</PreserveCompilationContext>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <OutputPath>$(AppData)\XIVLauncher\devPlugins\NekoLewd</OutputPath>
+    <OutputPath Condition="'$(OS)' == 'Windows_NT'">$(AppData)\XIVLauncher\devPlugins\Neko</OutputPath>
+    <OutputPath Condition="'$(OS)' == 'Unix'">./bin/</OutputPath>
   </PropertyGroup>
 
   <ProjectExtensions>
@@ -38,7 +39,8 @@
   </ProjectExtensions>
 
   <PropertyGroup>
-    <DalamudLibPath>$(AppData)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
+    <DalamudLibPath Condition="'$(OS)' == 'Windows_NT'">$(AppData)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
+    <DalamudLibPath Condition="'$(OS)' == 'Unix'">../../dalamud-distrib/</DalamudLibPath>
     <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
 
