--- a/Neko/Neko.csproj
+++ b/Neko/Neko.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Version>1.1.0</Version>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <LangVersion>latest</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Nullable>enable</Nullable>
@@ -13,7 +13,8 @@
     <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
     <PreserveCompilationContext>false</PreserveCompilationContext>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <OutputPath>$(AppData)\XIVLauncher\devPlugins\Neko</OutputPath>
+    <OutputPath Condition="'$(OS)' == 'Windows_NT'">$(AppData)\XIVLauncher\devPlugins\Neko</OutputPath>
+    <OutputPath Condition="'$(OS)' == 'Unix'">./bin/</OutputPath>
   </PropertyGroup>
 
   <ProjectExtensions>
@@ -39,7 +40,8 @@
   </ProjectExtensions>
 
   <PropertyGroup>
-    <DalamudLibPath>$(AppData)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
+    <DalamudLibPath Condition="'$(OS)' == 'Windows_NT'">$(AppData)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
+    <DalamudLibPath Condition="'$(OS)' == 'Unix'">../../dalamud-distrib/</DalamudLibPath>
     <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
 
@@ -59,7 +61,7 @@
   </ItemGroup>
    
   <ItemGroup> 
-    <PackageReference Include="DalamudPackager" Version="2.1.7"/> 
+    <PackageReference Include="DalamudPackager" Version="2.1.7" Condition="'$(OS)' == 'Windows_NT'"/> 
   </ItemGroup>
  
   <ItemGroup>
