--- a/Neko/Neko.csproj
+++ b/Neko/Neko.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>1.1.0</Version>
+    <Version>1.1.1</Version>
     <TargetFramework>net6.0-windows</TargetFramework>
     <LangVersion>latest</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -13,13 +13,14 @@
     <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
     <PreserveCompilationContext>false</PreserveCompilationContext>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <OutputPath Condition="'$(OS)' == 'Windows_NT'">$(AppData)\XIVLauncher\devPlugins\Neko</OutputPath>
-    <OutputPath Condition="'$(OS)' == 'Unix'">./bin/</OutputPath>
+    <OutputPath Condition="'$(OS)' == 'Unix'">$(HOME)/.xlcore/devPlugins/Neko</OutputPath>
   </PropertyGroup>
 
   <ProjectExtensions>
     <DalamudPlugin>
-      <ApiLevel>6</ApiLevel>
+      <ApiLevel>7</ApiLevel>
       <Author>Meisterlala</Author>
       <Name>Neko Fans</Name>
       <Punchline>Frustrated in a dungeon? Look at a cute cat girl!</Punchline>
@@ -41,7 +42,7 @@
 
   <PropertyGroup>
     <DalamudLibPath Condition="'$(OS)' == 'Windows_NT'">$(AppData)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
-    <DalamudLibPath Condition="'$(OS)' == 'Unix'">../../dalamud-distrib/</DalamudLibPath>
+    <DalamudLibPath Condition="'$(OS)' == 'Unix'">$(HOME)/.xlcore/dalamud/Hooks/dev/</DalamudLibPath>
     <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
 
@@ -75,6 +76,9 @@
   </ItemGroup>
 
   <ItemGroup> <!--  Used to manipulate Clipboard   -->
-    <PackageReference Include="TextCopy" Version="6.1.0" />
+    <PackageReference Include="TextCopy"> 
+        <Version>6.1.0</Version>
+        <GeneratePathProperty>true</GeneratePathProperty>
+      </PackageReference>
   </ItemGroup>
 </Project>
