--- a/Neko/DalamudPackager.targets
+++ b/Neko/DalamudPackager.targets
@@ -5,7 +5,7 @@
       OutputPath="$(OutputPath)"
       AssemblyName="$(AssemblyName)"
       VersionComponents="3"
-      MakeZip="false"
+      MakeZip="true"
     />
     </Target>
 </Project>
