--- a/Neko/Neko.csproj
+++ b/Neko/Neko.csproj
@@ -62,7 +62,7 @@
   </ItemGroup>
    
   <ItemGroup> 
-    <PackageReference Include="DalamudPackager" Version="2.1.7" Condition="'$(OS)' == 'Windows_NT'" /> 
+    <PackageReference Include="DalamudPackager" Version="2.1.8" /> 
   </ItemGroup>
  
   <ItemGroup>
