Added support for loading.jpg

--- a/Neko/Neko.csproj
+++ b/Neko/Neko.csproj
@@ -79,6 +79,7 @@
   <!-- Embedded Resources -->
   <ItemGroup>
     <EmbeddedResource Include="resources/error.jpg" />
+    <EmbeddedResource Include="resources/loading.jpg" />
   </ItemGroup>
 
   <!-- Used to manipulate Clipboard -->
