--- a/Neko/.editorconfig
+++ b/Neko/.editorconfig
@@ -170,3 +170,5 @@ dotnet_diagnostic.IDE0160.severity = silent
 dotnet_diagnostic.IDE0058.severity = silent
 # System.StringComparison
 dotnet_diagnostic.CA1307.severity = silent
+# Rename virtual/interface member so that it no longer conflicts with the reserved language keyword 'Next'. Using a reserved keyword as the name of a virtual/interface member makes it harder for consumers in other languages to override/implement the member
+dotnet_diagnostic.CA1716.severity = silent
