--- a/Neko/Neko.csproj
+++ b/Neko/Neko.csproj
@@ -16,6 +16,7 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <OutputPath Condition="'$(OS)' == 'Windows_NT'">$(AppData)\XIVLauncher\devPlugins\Neko</OutputPath>
     <OutputPath Condition="'$(OS)' == 'Unix'">$(HOME)/.xlcore/devPlugins/Neko</OutputPath>
+    <Configurations>Debug;Release;Network;Delays;Throw</Configurations>
   </PropertyGroup>
 
   <!-- Info for the Dalamud Packer -->
@@ -46,6 +47,16 @@
     <DalamudLibPath Condition="'$(OS)' == 'Windows_NT'">$(AppData)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
     <DalamudLibPath Condition="'$(OS)' == 'Unix'">$(HOME)/.xlcore/dalamud/Hooks/dev/</DalamudLibPath>
     <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+  </PropertyGroup>
+
+  <!-- Define Constants based on the Configuration -->
+  <!-- Everything is defined in the Debug Configuration, so roslyn is happy.
+       use dotnet build /p:DefineConstants="DEBUG" if you want a normal Debug build  -->
+  <PropertyGroup Condition="'$(Configuration)'=='Debug'">
+    <DefineConstants>TRACE;NETWORK;THROW;DELAY</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)'=='Release'">
+    <DefineConstants></DefineConstants>
   </PropertyGroup>
 
   <!-- Load DLLs included with Dalamud -->
