Added install Video

--- a/.github/workflows/generate_repo.yaml
+++ b/.github/workflows/generate_repo.yaml
@@ -18,7 +18,7 @@ jobs:
         id: extract_branch
       - uses: actions/checkout@v1
       - name: Run Powershell Script
-        run: .\generate-repo.ps1
+        run: .\resources\generate-repo.ps1
       - name: Commit files
         continue-on-error: true
         run: |
