Code Style and new Error handeling

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
     "recommendations": [
         "josefpihrt-vscode.roslynator",
-        "ms-dotnettools.csharp"
+        "ms-dotnettools.csharp",
+        "editorconfig.editorconfig"
     ]
 }
