--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,7 +81,9 @@ jobs:
           name: ${{ env.PROJECT_NAME }} ${{ steps.tag.outputs.tag }}
           tag_name: ${{ steps.tag.outputs.tag }}
           body: ${{ github.events.commits[0].message }}
-          files: ${{ steps.download.outputs.download-path }}\Neko*.zip
+          files: |
+            ${{ steps.download.outputs.download-path }}\NekoFans.zip
+            ${{ steps.download.outputs.download-path }}\NekoFansLewd.zip
 
       - name: Trigger plugin repo update
         uses: peter-evans/repository-dispatch@v1
