--- a/Neko/Neko.csproj
+++ b/Neko/Neko.csproj
@@ -92,7 +92,7 @@
    
   <!-- Needed for creating a .zip -->
   <ItemGroup> 
-    <PackageReference Include="DalamudPackager" Version="2.1.8" /> 
+    <PackageReference Include="DalamudPackager" Version="2.*" /> 
   </ItemGroup>
  
   <!-- Manifest -->
