--- a/NekoLewd/NekoLewd.csproj
+++ b/NekoLewd/NekoLewd.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>1.0.7</Version>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <Version>1.0.8</Version>
+    <TargetFramework>net9.0-windows</TargetFramework>
     <LangVersion>latest</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Nullable>enable</Nullable>
@@ -50,6 +50,6 @@
   </ItemGroup>
 
   <ItemGroup> 
-    <PackageReference Include="DalamudPackager" Version="11.*"/> 
+    <PackageReference Include="DalamudPackager" Version="12.0.0" /> 
   </ItemGroup>
 </Project>
