--- a/Neko/Neko.csproj
+++ b/Neko/Neko.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Dalamud.NET.Sdk/13.0.0">
 
   <PropertyGroup>
-    <Version>1.3.5</Version>
+    <Version>1.3.6</Version>
     <TargetFramework>net9.0-windows</TargetFramework>
     <LangVersion>latest</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -17,10 +17,7 @@
     <Configurations>Debug;Release;Network;Delays;Throw</Configurations>
   </PropertyGroup>
 
-  <!-- Set DalamudLibPath based on OS -->
   <PropertyGroup>
-    <DalamudLibPath Condition="'$(OS)' == 'Windows_NT'">$(AppData)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
-    <DalamudLibPath Condition="'$(OS)' == 'Unix'">$(HOME)/.xlcore/dalamud/Hooks/dev/</DalamudLibPath>
     <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
 
@@ -36,14 +33,6 @@
 
   <!-- Load DLLs included with Dalamud -->
   <ItemGroup>
-    <Reference Include="Dalamud">
-      <HintPath>$(DalamudLibPath)Dalamud.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="ImGui.NET">
-      <HintPath>$(DalamudLibPath)ImGui.NET.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="ImGuiScene">
       <HintPath>$(DalamudLibPath)ImGuiScene.dll</HintPath>
       <Private>False</Private>
@@ -62,11 +51,7 @@
     </Reference>
   </ItemGroup>
    
-  <!-- Needed for creating a .zip -->
-  <ItemGroup> 
-    <PackageReference Include="DalamudPackager" Version="12.*" /> 
-  </ItemGroup>
- 
+
   <!-- Embedded Resources -->
   <ItemGroup>
     <EmbeddedResource Include="resources/error.jpg" />
