--- a/.github/workflows/generate_repo.yaml
+++ b/.github/workflows/generate_repo.yaml
@@ -10,7 +10,7 @@ on:
 jobs:
   generate:
     name: Generate Repo
-    runs-on: windows-2019
+    runs-on: windows-latest
     steps:
       - name: Extract branch
         shell: bash
